# NSU_labs_CXX

./: .gitignore  .gitmodules  README.md
Task1/: CMakeLists.txt
Task1/libs/big_int/: CMakeLists.txt
Task1/libs/big_int/include/: big_int.h
Task1/libs/big_int/src/: big_int.cpp
Task1/libs/big_int/test/: big_int_tests.cpp
Task1/libs/comparison/: CMakelists.txt
Task1/libs/comparison/include/: comparison.h
Task1/libs/comparison/src/: comparison.cpp
Task1/src/: main.cpp
Task2/: CMakeLists.txt
Task2/configFiles/: pavlov.json
Task2/libs/CommandLineParser/: CMakeLists.txt
Task2/libs/CommandLineParser/include/: commandLineParser.h
Task2/libs/CommandLineParser/src/: commandLineParser.cpp
Task2/libs/Game/: CMakeLists.txt
Task2/libs/Game/include/: game.h
Task2/libs/Game/src/: game.cpp
Task2/libs/Game/test/: game_tests.cpp
Task2/libs/GameData/: CMakeLists.txt  points.txt
Task2/libs/GameData/include/: gameData.h
Task2/libs/GameData/src/: gameData.cpp
Task2/libs/GameData/test/: game_data.tests.cpp  game_data_tests.cpp
Task2/libs/Matrix/: CMakeLists.txt  matrixTest.txt
Task2/libs/Matrix/include/: matrix.h
Task2/libs/Matrix/src/: matrix.cpp
Task2/libs/Matrix/test/: matrix_tests.cpp
Task2/libs/Mode/: CMakeLists.txt
Task2/libs/Mode/include/: detailed.h  fast.h  mode.h  modeFactory.h  tournament.h
Task2/libs/Mode/src/: detailed.cpp  fast.cpp  mode.cpp  modeFactory.cpp  tournament.cpp
Task2/libs/Mode/test/: modes_tests.cpp
Task2/libs/Strategy/: CMakeLists.txt
Task2/libs/Strategy/include/: alwaysCooperate.h  alwaysDefect.h  alwaysDesert.h  copyMove.h  pavlov.h  random.h  softGrudger.h  strategy.h  strategyFactory.h  titForTat.h
Task2/libs/Strategy/src/: alwaysCooperate.cpp  alwaysDefect.cpp  alwaysDesert.cpp  copyMove.cpp  pavlov.cpp  random.cpp  softGrudger.cpp  strategyFactory.cpp  titForTat.cpp
Task2/libs/Strategy/test/: strategy_tests.cpp
Task2/src/: main.cpp
Task3/: CMakeLists.txt
Task3/examples/: config.txt
Task3/libs/CommandLineParser/include/: commandLineParser.h
Task3/libs/CommandLineParser/src/: commandLineParser.cpp
Task3/libs/WAV/: CMakeLists.txt
Task3/libs/WAV/include/: reader.h  wav.h  writer.h
Task3/libs/WAV/src/: reader.cpp  writer.cpp
Task3/libs/WAV/test/: wav_tests.cpp
Task3/libs/commandLineParser/: CMakeLists.txt
Task3/libs/commandLineParser/include/: commandLineParser.h
Task3/libs/commandLineParser/src/: commandLineParser.cpp
Task3/libs/converter/: CMakeLists.txt
Task3/libs/converter/include/: converter.h  converterFactory.h  mix.h  mute.h  noise.h
Task3/libs/converter/src/: converterFactory.cpp  mix.cpp  mute.cpp  noise.cpp
Task3/libs/converter/test/: converter_tests.cpp
Task3/libs/soundProcessor/: CMakeLists.txt
Task3/libs/soundProcessor/include/: soundProcessor.h
Task3/libs/soundProcessor/src/: soundProcessor.cpp
Task3/libs/soundProcessor/test/: sound_processor_tests.cpp
Task3/src/: main.cpp
